# so_example_avx

./: .gitignore  CMakeLists.txt
src/: test_avx2.cpp  test_avx2_sqrt.cpp  test_avx512.cpp
